# trabalho-3-1-autocomplete-nnkfernandes

./: CMakeLists.txt  README.md
include/: DataBase.hpp  File.hpp  Interface.hpp  Match.hpp  Sentence.hpp
src/: DataBase.cpp  File.cpp  Interface.cpp  Match.cpp  Sentence.cpp  main.cpp  test.cpp
